# devflow

./: .gitignore  README.md  devflow.html  package-lock.json  package.json  server.js  vite.config.js
scripts/: build-frontend.mjs
src/: app.css  app.js  icons.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
