[package]
name = "devflow"
version = "0.1.0"
description = "Local-first dashboard for development repos, notes, tasks, commits, and files."
authors = ["will"]
edition = "2021"

[lib]
name = "devflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
